# Geekbook

./: .gitignore  DEVELOPMENT.md  LICENSE  Makefile  README.md  docker-compose.yml  setup.bat  setup.ps1
fastapi-backend/: Dockerfile  env.example  pyproject.toml
fastapi-backend/app/: __init__.py  config.py  database.py  main.py
fastapi-backend/app/routers/: health.py
fastapi-backend/prisma/: schema.prisma
fastapi-backend/shared-data/: openapi.json
fastapi-backend/tests/: test_main.py
nextjs-frontend/: Dockerfile  next.config.js  openapi-ts.config.ts  package.json
nextjs-frontend/__tests__/: page.test.tsx
nextjs-frontend/app/: layout.tsx  page.tsx
